# new.chat-smart-contract

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-debug.yml  build-release.yml
a-dex.chat/: CMakeLists.txt  a-dex.chat.cpp  a-dex.chat.hpp
a-dex.chat/include/: resources.hpp
a-dex.chat/tables/: channel.hpp
new.chat/: CMakeLists.txt  new.chat.cpp  new.chat.hpp
new.chat/tables/: channel.hpp
scripts/: run_units.sh
tests/: CMakeLists.txt  contracts.hpp.in
tests/a-dex.chat/: a_dex_chat_api.cpp  a_dex_chat_api.hpp  a_dex_chat_tester.cpp  a_dex_chat_tester.hpp  a_dex_chat_unit_tests.cpp
tests/a-dex.chat/suites/: create_private_channel_tests.hpp  create_public_channel_tests.hpp  send_direct_message_tests.hpp  send_private_channel_message_tests.hpp  send_public_channel_message_tests.hpp
tests/new.chat/: new_chat_api.cpp  new_chat_api.hpp  new_chat_tester.cpp  new_chat_tester.hpp  new_chat_unit_tests.cpp
tests/new.chat/suites/: create_private_channel_tests.hpp  create_public_channel_tests.hpp  send_direct_message_tests.hpp  send_private_channel_message_tests.hpp  send_public_channel_message_tests.hpp
